syntax = "proto3";

package iotfsdb.service.internal;

import "partition-key.proto";
import "types.proto";

option java_package = "org.huebert.iotfsdb.api.grpc.proto.internal";
option java_outer_classname = "PartitionPersistenceServiceProto";

service PartitionService {
  rpc CreatePartition(CreatePartitionRequest) returns (CreatePartitionResponse);
  rpc DeletePartition(DeletePartitionRequest) returns (DeletePartitionResponse);
  rpc GetPartitions(GetPartitionsRequest) returns (GetPartitionsResponse);
  rpc ReadPartition(ReadPartitionRequest) returns (ReadPartitionResponse);
  rpc UpdatePartition(UpdatePartitionRequest) returns (UpdatePartitionResponse);
}

message CreatePartitionRequest {
  iotfsdb.internal.PartitionKey key = 1;
  int32 size = 2;
}

message DeletePartitionRequest {
  iotfsdb.internal.PartitionKey key = 1;
}

message GetPartitionsRequest {
  Series series = 1;
}

message ReadPartitionRequest {
  iotfsdb.internal.PartitionKey key = 1;
  int32 offset = 2;
  int32 length = 3;
}

message UpdatePartitionRequest {
  iotfsdb.internal.PartitionKey key = 1;
  int32 offset = 2;
  bytes data = 3;
}

message CreatePartitionResponse {
  Status status = 1;
}

message DeletePartitionResponse {
  Status status = 1;
}

message GetPartitionsResponse {
  Status status = 1;
  repeated iotfsdb.internal.PartitionKey partitions = 2;
}

message ReadPartitionResponse {
  Status status = 1;
  bytes data = 2;
}

message UpdatePartitionResponse {
  Status status = 1;
}
